# goph420-w2024-lab03-stSL

./: README.md  pyproject.toml
data/: M_data.txt
examples/: driver.py
src/lab_03/: regression.py
